--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>List of Vets</title>
 </head>
 <body>
-<h1 th:text="'List of Vets'">List of Vets ... </h1>
 
-<table>
+<h2>Veterinarians</h2>
+
+<table id="vets" class="table table-striped">
     <thead>
     <tr>
         <th>Id</th>
